--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <h3><span>Past Clients</span></h3>
         <div class="past-clients-grid">
           <img src="/img/client1.jpg" alt="">
-          <img src="/img/client2.jpg" alt="">
+          <!-- <img src="/img/client2.jpg" alt=""> -->
           <img src="/img/client3.jpg" alt="">
           <img src="/img/client4.jpg" alt="">
           <img src="/img/client5.jpg" alt="">
