--- a/index.html
+++ b/index.html
@@ -143,19 +143,19 @@
 
   <div class="raribles">
     <div class="rarible-items">
-      <img src="/img/physical-collectible.png" alt="">
+      <img src="img/physical-collectible.png" alt="">
       <h1>Digital + Physical <br>
           Collectibles</h1>
       <h2>Your favorite characters from Sector 217, available as NFT and physical collectibles. Choose from Max, Karmak, Demon, Necro Trooper, Scrape, Kai and of course Huxley, or collect them all!</h2>
     </div>
     <div class="rarible-items">
-      <img src="/img/meta-fashion.png" alt="">
+      <img src="img/meta-fashion.png" alt="">
       <h1>Metaverse  <br> 
         Fashion</h1>
       <h2>Designs and fashion from the wastelands of Fury-7, wearable anywhere across the metaverse. Set your avatar apart with the latest gear from Sector 217.</h2>
     </div>
     <div class="rarible-items">
-      <img src="/img/Genisis-token.png" alt="">
+      <img src="img/Genisis-token.png" alt="">
       <h1>Airdrops + <br> 
         Giveaways</h1>
       <h2>Your journey into the Huxley universe has just begun… Who knows what you might discover. As always, Central A.I. is watching. Your loyalty just might be rewarded.</h2>
@@ -166,28 +166,28 @@
   <div class="creator">
     <h1>Creator</h1>
     <div class="creator-profile">
-      <img class="profile-pic" src="/img/profile-image.jpg" alt="">
+      <img class="profile-pic" src="img/profile-image.jpg" alt="">
       <div class="creator-items">
         <h2><span>Ben Mauro</span></h2>
         <p>World builder. Character creator. NFT artist. Ben Mauro’s work has made a powerful impact on the gaming world, as senior concept designer and art director for first-person-shooting dynasties Halo and Call of Duty. His visions have graced the big screen in Elysium, Chappie, and J.R.R. Tolkien’s The Hobbit. Now he unveils his fully-fledged graphic novel series, Huxley.</p>
 
         <h3><span>Past Clients</span></h3>
         <div class="past-clients-grid">
-          <img src="/img/client1.jpg" alt="">
+          <img src="img/client1.jpg" alt="">
           <!-- <img src="/img/client2.jpg" alt=""> -->
-          <img src="/img/client3.jpg" alt="">
-          <img src="/img/client4.jpg" alt="">
-          <img src="/img/client5.jpg" alt="">
-          <img src="/img/client6.jpg" alt="">
-          <img src="/img/client7.jpg" alt="">
-          <img src="/img/client8.jpg" alt="">
-          <img src="/img/client9.jpg" alt="">
-          <img src="/img/client10.jpg" alt="">
+          <img src="img/client3.jpg" alt="">
+          <img src="img/client4.jpg" alt="">
+          <img src="img/client5.jpg" alt="">
+          <img src="img/client6.jpg" alt="">
+          <img src="img/client7.jpg" alt="">
+          <img src="img/client8.jpg" alt="">
+          <img src="img/client9.jpg" alt="">
+          <img src="img/client10.jpg" alt="">
         </div>
         <div class="creator-from">
-          <img src="/img/creator-from1.jpg" alt="">
-          <img src="/img/creator-from2.jpg" alt="">
-          <img src="/img/creator-from3.jpg" alt="">
+          <img src="img/creator-from1.jpg" alt="">
+          <img src="img/creator-from2.jpg" alt="">
+          <img src="img/creator-from3.jpg" alt="">
         </div>
         <button class="learn-btn">Learn More</button>
       </div>
