--- a/index.html
+++ b/index.html
@@ -50,38 +50,38 @@
   </div> -->
 
   <div class="showcase">
-    <img src="/img/showcase-img2.png" alt="">
+    <img src="img/showcase-img2.png" alt="">
   </div>
   
   <!-- Issues -->
   <div class="issues">
     <div class="issue-item">
-      <img src="/img/issue1.jpg" alt="">
+      <img src="img/issue1.jpg" alt="">
       <h3 class="primary-text">Issue 1</h3>
       <h3 class="secondary-text">Edition of 10,000</h3>
     </div>
     <div class="issue-item">
-      <img src="/img/issue2.jpg" alt="">
+      <img src="img/issue2.jpg" alt="">
       <h3 class="primary-text">Issue 2</h3>
       <h3 class="secondary-text">Edition of 10,000</h3>
     </div>
     <div class="issue-item">
-      <img src="/img/issue3.jpg" alt="">
+      <img src="img/issue3.jpg" alt="">
       <h3 class="primary-text">Issue 3</h3>
       <h3 class="secondary-text">Edition of 10,000</h3>
     </div>
     <div class="issue-item">
-      <img src="/img/issue4.jpg" alt="">
+      <img src="img/issue4.jpg" alt="">
       <h3 class="primary-text">Issue 4</h3>
       <h3 class="secondary-text">Edition of 10,000</h3>
     </div>
     <div class="issue-item">
-      <img src="/img/issue5.jpg" alt="">
+      <img src="img/issue5.jpg" alt="">
       <h3 class="primary-text">Issue 5</h3>
       <h3 class="secondary-text">Edition of 10,000</h3>
     </div>
     <div class="issue-item">
-      <img src="/img/issue6.jpg" alt="">
+      <img src="img/issue6.jpg" alt="">
       <h3 class="primary-text">Issue 6</h3>
       <h3 class="secondary-text">Edition of 10,000</h3>
     </div>
@@ -89,7 +89,7 @@
 
   <div class="showcase-issue">
     <div class="current-issue">
-      <img src="/img/issue3.jpg" alt="">
+      <img src="img/issue3.jpg" alt="">
     </div>
     <div class="issue-description">
       <h3>ISSUE #3</h3>
@@ -108,18 +108,18 @@
   </div>
   <div class="raribles">
     <div class="rarible-items">
-      <img src="/img/digital-physical.png" alt="">
+      <img src="img/digital-physical.png" alt="">
       <h1>Huxley Comics - Digital + Physical</h1>
       <h2>Six exclusive issues. One incredible journey. Available for purchase and digital download as NFTs and redeemable for physical editions. Join the hunt to complete the saga.</h2>
     </div>
     <div class="rarible-items">
-      <img src="/img/gold-edition.png" alt="">
+      <img src="img/gold-edition.png" alt="">
       <h1>Ultra Rare <br> 
         Gold Editions</h1>
       <h2>Like all things on Fury-7, resources are limited - especially for the Ultra Rare Gold Editions. Luck could play a role in obtaining these special edition digital + physical comics and collectibles.</h2>
     </div>
     <div class="rarible-items">
-      <img src="/img/access-pass.png" alt="">
+      <img src="img/access-pass.png" alt="">
       <h1>Central A.I. <br> 
         Access Pass</h1>
       <h2>Want exclusive access to the entire Huxley universe? Central A.I. has issued a limited quantity of Access Passes. Only the most loyal will be worthy.</h2>
@@ -199,7 +199,7 @@
     <h1>Team</h1>
     <div class="team-grid">
       <div class="team-grid-item">
-        <img src="/img/team1.jpg" alt="">
+        <img src="img/team1.jpg" alt="">
         <h3>CEO + Founder of Feature</h3>
         <h2>Steven Ilous</h2>
         <p>A visionary entrepreneur and creative professional with over 20 years of feature film, video game, and web experience, Steven has worked closely with some of the greatest talents in entertainment. Inspired by Steven’s dream to build a better system for creators, Feature is building a new platform for buying and selling intellectual property.</p>
@@ -211,7 +211,7 @@
       </div>
 
       <div class="team-grid-item">
-        <img src="/img/team2.jpg" alt="">
+        <img src="img/team2.jpg" alt="">
         <h3>Lead Developer</h3>
         <h2>Seb Brocher</h2>
         <p>Seb is a technology entrepreneur and developer with a passion and talent for the arts. Seb developed CryptoArte, one of the first generative art NFT projects on the Ethereum network, and is the founder and CEO of Chimichurri, a software development company.</p>
@@ -223,7 +223,7 @@
       </div>
 
       <div class="team-grid-item">
-        <img src="/img/team3.jpg" alt="">
+        <img src="img/team3.jpg" alt="">
         <h3>Marketing Director</h3>
         <h2>Oliver Permut</h2>
         <p>A multi-disciplined creative with experience in the music, entertainment, hospitality and tech industries, Oliver brings unique insight and passion to each project. He has lead social campaigns for the world’s premier electronic music festival, made commercials for Vice Media in Berlin, and spearheaded hospitality start-up initiatives in Miami.</p>
@@ -235,7 +235,7 @@
       </div>
 
       <div class="team-grid-item">
-        <img src="/img/team4.jpg" alt="">
+        <img src="img/team4.jpg" alt="">
         <h3>Head of Community</h3>
         <h2>Kasandra Vegas</h2>
         <p>Educator. Community builder. Co-Founder of NFTs.Tips. In the rapidly emerging NFT space, Kas bridges the gap between art, tech, culture and provenance, and brings an enthusiastic voice to new projects, ventures, and creators.</p>
