--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- portal home -->
     <div class="portal" data-aos="fade-down">
-      <a href="anchor-media.com">
+      <a href="https://anchor-media.com">
         <img src="img/anchor.png" alt="">
       </a>
     </div>
