--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
     <!-- portal home -->
-    <div class="portal" data-aos="fade-down">
+    <!-- <div class="portal" data-aos="fade-down">
       <a href="https://anchor-media.com">
         <img src="img/anchor.png" alt="">
       </a>
-    </div>
+    </div> -->
 
   <!-- nav -->
   <nav>
@@ -23,48 +23,33 @@
       <div class="logo">
         <h1>HUXLEY</h1>
         <h4>DEMO</h4>
-        </div>
+      </div>
       <div class="nav-items">
-        <!-- <ul>
-          <li class="nav-item"><a href="#">Check Token</a></li>
-          <li class="nav-item"><a href="#">Avatars</a></li>
-          <li class="nav-item"><a href="#">Auction</a></li>
-          <li class="nav-item"><a href="#">Collection</a></li>
-          <li class="nav-item"><a href="#">FAQ</a></li>
-          <li class="nav-item"><a href="#">About</a></li>
-          <li class="nav-item"><a href="#">Tokenonmics</a></li>
-        </ul> -->
-          <a href="#" class="nav-item">Check Token</a>
-          <a href="#" class="nav-item">Avatars</a>
-          <a href="#" class="nav-item">Auction</a>
-          <a href="#" class="nav-item">Collection</a>
-          <a href="#" class="nav-item">FAQ</a>
-          <a href="#" class="nav-item">About</a>
-          <a href="#" class="nav-item">Tokenonmics</a>
-          <button class="btn btn-outline">Connect Wallet</button>
+        <a href="#" class="nav-item">Check Token</a>
+        <a href="#" class="nav-item">Avatars</a>
+        <a href="#" class="nav-item">Auction</a>
+        <a href="#" class="nav-item">Collection</a>
+        <a href="#" class="nav-item">FAQ</a>
+        <a href="#" class="nav-item">About</a>
+        <a href="#" class="nav-item">Tokenonmics</a>
+        <button class="btn btn-outline">Connect Wallet</button>
+      </div>
+      <div class="burger">
+        <div class="line1 burger-div"></div>
+        <div class="line2 burger-div"></div>
+        <div class="line3 burger-div"></div>
       </div>
     </div>
   </nav>
-
-  <!-- Showcase Video -->
-  <!-- <div class="video fullscreen-bg">
-    <video
-      muted
-      autoplay
-      loop
-      id="trailer"
-      src="/vid/Huxley-Trailer.mp4"
-      type="video/mp4">
-    </video>
-  </div> -->
 
   <div class="showcase">
     <img src="img/showcase-img2.png" alt="">
   </div>
   
   <!-- Issues -->
-  <div class="issues">
-    <div class="issue-item">
+  <div class="container">
+    <div class="issues">
+      <div class="issue-item">
       <img src="img/issue1.jpg" alt="">
       <h3 class="primary-text">Issue 1</h3>
       <h3 class="secondary-text">Edition of 10,000</h3>
@@ -95,6 +80,7 @@
       <h3 class="secondary-text">Edition of 10,000</h3>
     </div>
   </div>
+</div>
 
   <div class="showcase-issue">
     <div class="current-issue">
@@ -109,31 +95,33 @@
       <h2>Check us out on <a href="https://opensea.io/collection/huxley-comics">OpenSea</a></h2>
     </div>
   </div>
-
+  
   <!-- Roadmap -->
-  <div class="roadmap-title">
-    <h2>HUXLEY</h2>
-    <h1>Roadmap</h1>
-  </div>
-  <div class="raribles">
-    <div class="rarible-items">
-      <img src="img/digital-physical.png" alt="">
-      <h1>Huxley Comics - Digital + Physical</h1>
-      <h2>Six exclusive issues. One incredible journey. Available for purchase and digital download as NFTs and redeemable for physical editions. Join the hunt to complete the saga.</h2>
+  <div class="roadmap container">
+    <div class="roadmap-title">
+      <h2>HUXLEY</h2>
+      <h1>Roadmap</h1>
     </div>
-    <div class="rarible-items">
-      <img src="img/gold-edition.png" alt="">
-      <h1>Ultra Rare <br> 
-        Gold Editions</h1>
-      <h2>Like all things on Fury-7, resources are limited - especially for the Ultra Rare Gold Editions. Luck could play a role in obtaining these special edition digital + physical comics and collectibles.</h2>
+    <div class="raribles">
+      <div class="rarible-items">
+        <img src="img/digital-physical.png" alt="">
+        <h1>Huxley Comics - Digital + Physical</h1>
+        <h2>Six exclusive issues. One incredible journey. Available for purchase and digital download as NFTs and redeemable for physical editions. Join the hunt to complete the saga.</h2>
+      </div>
+      <div class="rarible-items">
+        <img src="img/gold-edition.png" alt="">
+        <h1>Ultra Rare <br> 
+          Gold Editions</h1>
+        <h2>Like all things on Fury-7, resources are limited - especially for the Ultra Rare Gold Editions. Luck could play a role in obtaining these special edition digital + physical comics and collectibles.</h2>
+      </div>
+      <div class="rarible-items">
+        <img src="img/access-pass.png" alt="">
+        <h1>Central A.I. <br> 
+          Access Pass</h1>
+        <h2>Want exclusive access to the entire Huxley universe? Central A.I. has issued a limited quantity of Access Passes. Only the most loyal will be worthy.</h2>
+      </div>
     </div>
-    <div class="rarible-items">
-      <img src="img/access-pass.png" alt="">
-      <h1>Central A.I. <br> 
-        Access Pass</h1>
-      <h2>Want exclusive access to the entire Huxley universe? Central A.I. has issued a limited quantity of Access Passes. Only the most loyal will be worthy.</h2>
-    </div>
-  </div>
+</div>
 
   <!-- Phase One -->
   <div class="phase-one-section">
